Generated by git on Sat 17 Mar 2012 08:15:31 UTC 
 DO NOT EDIT 

commit 2d9d6b5a29eea358621c31fc8ae839fdaf86bef0
Author: Yasyf Mohamedali <yasyf@yasyf.com>
Date:   Sat Mar 17 01:15:29 2012 -0700

    updated notes

 ChangeLog |   13 ++++++++++++-
 readme    |    4 +++-
 2 files changed, 15 insertions(+), 2 deletions(-)

commit df5f25dfda0f09a5b291949829a02e1ff3a4b38f
Author: Yasyf Mohamedali <yasyf@yasyf.com>
Date:   Sat Mar 17 01:04:25 2012 -0700

    animation tweaks

 ChangeLog   |   12 +++++++++++-
 v4/play.fla |  Bin 15313 -> 15318 bytes
 v4/play.swf |  Bin 5764 -> 5822 bytes
 3 files changed, 11 insertions(+), 1 deletions(-)

commit 9be2d75afa6488ad0a032c914f334d0fd02a58a6
Author: Yasyf Mohamedali <yasyf@yasyf.com>
Date:   Sat Mar 17 01:00:14 2012 -0700

    added TODO

 ChangeLog |   59 +++++++++++++++++++++++++++++++++++------------------------
 TODO      |    2 ++
 2 files changed, 37 insertions(+), 24 deletions(-)

commit 876ed00071b5083ae6d0538d5b08ddb46fa8bdd0
Author: Yasyf Mohamedali <yasyf@yasyf.com>
Date:   Sat Mar 17 00:53:11 2012 -0700

    animation (falling) tweaks

 ChangeLog   |   17 +++++++++++++++--
 v4/play.fla |  Bin 15155 -> 15313 bytes
 v4/play.swf |  Bin 5677 -> 5764 bytes
 3 files changed, 15 insertions(+), 2 deletions(-)

commit 1ddc7374b581713d9d9b73dbca2e977e732392ca
Author: Yasyf Mohamedali <yasyf@yasyf.com>
Date:   Fri Mar 16 03:13:57 2012 -0700

    automatic changelog generation

 ChangeLog |   11 +++++++++++
 1 files changed, 11 insertions(+), 0 deletions(-)

commit de01f6811c6307a243fb59a16263be1378f51ceb
Author: Yasyf Mohamedali <yasyf@yasyf.com>
Date:   Fri Mar 16 02:47:31 2012 -0700

    added changelog

 ChangeLog |  628 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 files changed, 628 insertions(+), 0 deletions(-)

commit 4ae38de480b3b0a7a4d879eda7bbfcbfeae22840
Author: Yasyf Mohamedali <yasyf@yasyf.com>
Date:   Fri Mar 16 02:39:13 2012 -0700

    updated readme

 readme |    5 ++++-