@@ -4,12 +4,7 @@ if (!isset($game)) {
 exit("game not set");
 }
 
-$host = "localhost"; //database location
-$user = "yasyfcom_play"; //database username
-$pass = "Brentwood!"; //database password
-$db_name = "yasyfcom_play"; //database name
-$link = mysql_connect($host, $user, $pass);
-mysql_select_db($db_name);
+include 'vars.php';
 $player = $_REQUEST['player'];
 $turn = $_REQUEST['turn']; //current turn
 if ($player == 1) //side-scrolling player
