@@ -7,12 +7,7 @@
 		if (!isset($turn)) {
 		exit("turn not set");
 		}
-	$host = "localhost"; //database location
-	$user = "yasyfcom_play"; //database username
-	$pass = "Brentwood!"; //database password
-	$db_name = "yasyfcom_play"; //database name
-	$link = mysql_connect($host, $user, $pass);
-	mysql_select_db($db_name);
+	include 'vars.php';
 	
 	$box1x = $_REQUEST['box1x']; //new box1x
 	$box2x = $_REQUEST['box2x']; //new box2x
