@@ -1,5 +1,16 @@
-Generated by git on Sat 17 Mar 2012 08:15:31 UTC 
+Generated by git on Tue 27 Mar 2012 03:03:16 UTC 
  DO NOT EDIT 
+
+commit 83b8ece84b3da5e54e53a8dc8d6e736923abd9c9
+Author: Yasyf Mohamedali <yasyf@yasyf.com>
+Date:   Mon Mar 26 20:03:15 2012 -0700
+
+    bugfix for click
+
+ ChangeLog      |   12 +++++++++++-
+ v4/player2.fla |  Bin 14553 -> 14585 bytes
+ v4/player2.swf |  Bin 5965 -> 5957 bytes
+ 3 files changed, 11 insertions(+), 1 deletions(-)
 
 commit 2d9d6b5a29eea358621c31fc8ae839fdaf86bef0
 Author: Yasyf Mohamedali <yasyf@yasyf.com>
